--- a/FE/src/app/homepage/homepage.component.html
+++ b/FE/src/app/homepage/homepage.component.html
@@ -9,7 +9,7 @@
     <div class="col-12 col-lg-6 mx-auto mt-5">
       <div class="d-flex justify-content-between sm-column">
         <div class="col d-flex justify-content-center">
-          <a class="btn btn-orange ml-5" href="/launching-soon">Get Started</a>
+          <a class="btn btn-orange ml-5" href="/facebook">Get Started</a>
         </div>
         <!-- <div class="col d-flex flex-row see-sm">
           <button class="btn btn-green">
@@ -41,7 +41,7 @@
         <h1 class="title-2">SEND MESSAGES TO THE PEOPLE IN YOUR INBOX</h1>
         <h6 class="title-3">Imagine sending promotions to the people who already showed interest in your business. With LeadsBus you can send laser targeted messages to all the people in your Facebook page’s inbox.</h6>
         <div class="center-sm">
-          <a class="btn btn-blue" href="/launching-soon">Get Started</a>
+          <a class="btn btn-blue" href="/facebook">Get Started</a>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
         <h1 class="title-2">LABEL USERS RIGHT FROM YOUR POSTS, NOT ONLY FROM YOUR INBOX</h1>
         <h6 class="title-3">You have the ability to separate your customers by categories using labels, so you can organize your leads by product, interest, service or any tag that works for you and your business. With LeadsBus you can label many users at the same time.</h6>
         <div class="center-sm">
-          <a class="btn btn-blue" href="/launching-soon">Get Started</a>
+          <a class="btn btn-blue" href="/facebook">Get Started</a>
         </div>
       </div>
       <div class="order-1 order-md-2 feature-1-img col-sm-12 col-md-6 p-0">
@@ -68,7 +68,7 @@
         <h1 class="section-title">Effortless Messaging to Your Facebook Connections</h1>
       </div>
       <div class="col-12 col-lg-3 d-flex justify-content-end">
-        <a class="btn btn-orange" href="/launching-soon">Get Started</a>
+        <a class="btn btn-orange" href="/facebook">Get Started</a>
       </div>
     </div>
     <div class="-mt-15-sm d-flex justify-content-between mt-4">
