--- a/FE/src/app/chat/group-list/group-list.component.html
+++ b/FE/src/app/chat/group-list/group-list.component.html
@@ -10,7 +10,7 @@
   <div class="app-screen">
     <h1>Pages</h1>
     <div class="search-container">
-      <input class="search-input" placeholder="Search groups..." [(ngModel)]="searchQuery">
+      <input class="search-input" placeholder="Search pages..." [(ngModel)]="searchQuery">
       <button class="search-button" (click)="filterGroups()">Search</button>
     </div>
     <div class="outer-container">
