--- a/FE/src/app/footer/footer.component.html
+++ b/FE/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-12 col-lg-6">
         <h5 class="title-1"><a style="color: white" href="/">LeadsBus</a></h5>
-        <h6 class="subtitle col-12 col-lg-11 p-0">Revolutionize your customer engagement. Automate promotions, enhance connections, and grow your business with ease. Your journey to success starts here.</h6>
+        <h6 class="subtitle col-12 col-lg-11 p-0">Revolutionize your customer engagement. Make seamless communication, enhance connections, and grow your business with ease. Your journey to success starts here.</h6>
       </div>
 
       <div class="col-12 col-lg-2 mt-sm-20">
@@ -28,7 +28,7 @@
       <h6>2022 LeadsBus. All rights reserved. -- Privacy Policy - Terms of Services</h6>
     </div>
     <div class="col-12 col-md-6 text-right text-center-sm">
-      <h6>Supported By Deosai Ventures</h6>
+      <h6>Smile, you are using leadsBus 😊</h6>
     </div>
   </div>
 </footer>
