--- a/FE/src/app/homepage/homepage.component.html
+++ b/FE/src/app/homepage/homepage.component.html
@@ -1,10 +1,10 @@
 <section class="homepage">
   <div class="center">
     <h1 class="section-title col-12 col-md-9 mx-auto">
-      Managing your leads have never been this easier
+      Managing your leads have never been this fairer
     </h1>
     <h5 class="subtitle col-12 col-md-9 col-lg-6 mx-auto">
-      Send hundreds of inbox messages to your customers from your facebook page.
+      Send hundreds of inbox messages to your customers without discrimination.
     </h5>
     <div class="col-12 col-lg-6 mx-auto mt-5">
       <div class="d-flex justify-content-between sm-column">
@@ -28,7 +28,7 @@
 
 <section class="container">
   <div class="partners">
-    <h5 class="section-title">Over 32k+ software  businesses growing with LeadsBus.</h5>
+    <h5 class="section-title">Making communication fairer, fast and transparent.</h5>
   </div>
 
   <div class="features">
@@ -38,8 +38,10 @@
       </div>
       <div class="feature-info col-sm-12 col-md-6 p-0">
         <h5 class="title-1">Our Feature</h5>
-        <h1 class="title-2">SEND MESSAGES TO THE PEOPLE IN YOUR INBOX</h1>
-        <h6 class="title-3">Imagine sending promotions to the people who already showed interest in your business. With LeadsBus you can send laser targeted messages to all the people in your Facebook page’s inbox.</h6>
+        <h1 class="title-2">MESSENGER WITHOUT NAMES OR PROFILE PICTURES</h1>
+        <h6 class="title-3">
+          Our messenger is designed to prevent bias and discrimination by hiding people’s names and profile pictures from representatives handling clients. This ensures fair and equal treatment for everyone.
+        </h6>
         <div class="center-sm">
           <a class="btn btn-blue" href="/facebook">Get Started</a>
         </div>
@@ -48,8 +50,10 @@
     <div class="row mt-5">
       <div class="order-2 order-md-1 feature-info col-sm-12 col-md-6 p-0">
         <h5 class="title-1">Our Feature</h5>
-        <h1 class="title-2">LABEL USERS RIGHT FROM YOUR POSTS, NOT ONLY FROM YOUR INBOX</h1>
-        <h6 class="title-3">You have the ability to separate your customers by categories using labels, so you can organize your leads by product, interest, service or any tag that works for you and your business. With LeadsBus you can label many users at the same time.</h6>
+        <h1 class="title-2">LIMITED CLIENT INFORMATION & PAGE-BASED INBOX</h1>
+        <h6 class="title-3">
+          Representatives only see the last 25 messages in each conversation, reducing the chance to know clients personally. Pages are listed, and opening a page leads to its inbox messages, keeping interactions focused and unbiased.
+        </h6>
         <div class="center-sm">
           <a class="btn btn-blue" href="/facebook">Get Started</a>
         </div>
